when deleting downloads via web-interface a proper hint regarding deleting of already downloaded files from disk depending on option <DeleteCleanupDisk> is displayed
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@671 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1089,8 +1089,13 @@
 		<p>
 		Delete selected downloads?
 		</p>
-		<p class="confirm-help-block">
-		Selected items will be removed from the queue. Already downloaded files remain on disk.
+		<p id="DownloadsDeleteConfirmDialog_Remain" class="confirm-help-block">
+		Selected items will be removed from queue. Already downloaded files remain on disk (this behavior can be changed via option
+		<strong><em>DeleteCleanupDisk</em></strong>).
+		</p>
+		<p id="DownloadsDeleteConfirmDialog_Cleanup" class="confirm-help-block">
+		Selected items will be removed from queue. Already downloaded files will be deleted from disk (this behavior can be changed via option
+		<strong><em>DeleteCleanupDisk</em></strong>).
 		</p>
 	</div>
 	<div id="DownloadsDeleteConfirmDialog_OK">Delete</div>
