--- a/webui/index.html
+++ b/webui/index.html
@@ -995,51 +995,76 @@
 <div class="modal hide" id="HistoryEditDialog">
 	<div class="modal-header">
 		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
+		<a class="back" id="HistoryEdit_Back" href="#" title="Back"><i class="icon-back"></i></a>
+		<a class="back back-hidden" id="HistoryEdit_BackSpace"><i class="icon-hidden"></i></a>
 		<h3 id="HistoryEdit_Title"></h3>
 	</div>
 
 	<div class="modal-body">
-		<div class="form-horizontal">
-			<fieldset>
+		<div>
+			<div class="modal-tab" id="HistoryEdit_GeneralTab">
+				<div class="form-horizontal">
+					<fieldset>
 
-				<div class="control-group">
-					<label class="control-label" for="HistoryEdit_Status">Status</label>
-					<div class="controls" style="margin-top: 4px;">
-						<span id="HistoryEdit_Status"></span>
-					</div>
+						<div class="control-group">
+							<label class="control-label" for="HistoryEdit_Status">Status</label>
+							<div class="controls" style="margin-top: 4px;">
+								<span id="HistoryEdit_Status"></span>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<label class="control-label" for="HistoryEdit_Category">Category</label>
+							<div class="controls">
+								<span class="input-xlarge uneditable-input" id="HistoryEdit_Category"></span>
+							</div>
+						</div>
+
+						<div class="control-group" id="HistoryEdit_PathGroup">
+							<label class="control-label" for="HistoryEdit_Path">Download Path</label>
+							<div class="controls">
+								<span class="uneditable-mulitline-input" id="HistoryEdit_Path"></span>
+							</div>
+						</div>
+
+						<div class="control-group control-group-last" id="HistoryEdit_StatisticsGroup">
+							<label class="control-label" for="HistoryEdit_Statistics">Statistics</label>
+							<div class="controls">
+							<table class="table table-striped table-bordered data-statistics">
+								<tbody id="HistoryEdit_Statistics">
+								</tbody>
+							</table>
+							</div>
+						</div>
+
+						<div class="control-group">
+							<div class="controls">
+								<div class="modal-bottom-toolbar">
+									<button class="btn" data-tab="HistoryEdit_ParamTab" id="HistoryEdit_Param" title="Post-processing parameters">PP-Parameters <i class="icon-forward" style="opacity:0.6;"></i></button>
+								</div>
+							</div>
+						</div>
+						
+					</fieldset>
 				</div>
+			</div>
 
-				<div class="control-group">
-					<label class="control-label" for="HistoryEdit_Category">Category</label>
-					<div class="controls">
-						<span class="input-xlarge uneditable-input" id="HistoryEdit_Category"></span>
-					</div>
+			<div class="modal-tab hide" id="HistoryEdit_ParamTab">
+				<div class="form-horizontal">
+					<fieldset id="HistoryEdit_ParamData">
+					</fieldset>
 				</div>
-
-				<div class="control-group" id="HistoryEdit_PathGroup">
-					<label class="control-label" for="HistoryEdit_Path">Download Path</label>
-					<div class="controls">
-						<span class="uneditable-mulitline-input" id="HistoryEdit_Path"></span>
-					</div>
-				</div>
-
-				<div class="control-group" style="margin-top: 15px; margin-bottom:0;" id="HistoryEdit_StatisticsGroup">
-					<label class="control-label" for="HistoryEdit_Statistics">Statistics</label>
-					<div class="controls">
-					<table class="table table-striped table-bordered data-statistics">
-						<tbody id="HistoryEdit_Statistics">
-						</tbody>
-					</table>
-					</div>
-				</div>
-
-			</fieldset>
+			</div>
 		</div>
 	</div>
-
+			
 	<div class="modal-footer">
-		<div class="btn-group pull-left" id="HistoryEdit_DeleteGroup">
-			<a href="#" class="btn pull-left" id="HistoryEdit_Delete"><i class="icon-trash"></i> Delete</a>
+		<div class="btn-group dropup pull-left" id="HistoryEdit_DeleteGroup">
+		<a class="btn dropdown-toggle btn-danger" data-toggle="dropdown"><i class="icon-trash-white"></i> Delete <span class="caret"></span></a>
+		<ul class="dropdown-menu confirm-menu">
+			<li class="menu-header">Confirm</li>
+			<li><a href="#" id="HistoryEdit_Delete">Yes, Delete</a></li>
+		</ul>
 		</div>
 
 		<div class="btn-group dropup pull-left" id="HistoryEdit_ReprocessGroup">
@@ -1051,15 +1076,16 @@
 		</div>
 
 		<div class="btn-group dropup pull-left" id="HistoryEdit_ReturnGroup">
-		<a class="btn dropdown-toggle" data-toggle="dropdown">Return to Queue <span class="caret"></span></a>
+		<a class="btn dropdown-toggle" data-toggle="dropdown">Return <span class="caret"></span></a>
 		<ul class="dropdown-menu confirm-menu">
 			<li class="menu-header">Confirm</li>
-			<li><a href="#" id="HistoryEdit_Return">Yes, Return</a></li>
+			<li><a href="#" id="HistoryEdit_Return">Yes, Return to Queue</a></li>
 		</ul>
 		</div>
 
-		<div class="dialog-transmit" style="position:absolute;margin-left:400px;" id="HistoryEdit_Transmit"><img src="img/transmit.gif"></div>
-		<a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
+		<div class="dialog-transmit" style="position:absolute;margin-left:320px;" id="HistoryEdit_Transmit"><img src="img/transmit.gif"></div>
+		<a href="#" class="btn" data-dismiss="modal" id="HistoryEdit_Close">Close</a>
+		<a href="#" class="btn btn-primary" id="HistoryEdit_Save">Save changes</a>
 	</div>
 </div>
 
@@ -1439,6 +1465,10 @@
 
 <div id="Notif_History_Reproces" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
     <strong>Post-Processing</strong>
+</div>
+
+<div id="Notif_History_Saved" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
+    <strong>Saved</strong>
 </div>
 
 <div id="Notif_Config_Unchanged" data-duration="2000" class="alert alert-inverse alert-center alert-center-small hide">
