if a communication error occurs in web-interface, it retries multiple times before giving up with an error message
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@689 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -181,8 +181,12 @@
 	<p id="ErrorAlert-text"></p>
 </div>
 
-<!-- *** INIT LOADING-ALERT ************************************************************ -->
+<!-- *** ERROR BLOCK  ****************************************************************** -->
+<div id="RefreshError" data-duration="1000" style="display:none" class="alert alert-inverse alert-center alert-center-small hide">
+    <strong>Communication error, retrying...</strong>
+</div>
 
+<!-- *** INIT LOADING-ALERT ************************************************************ -->
 <div class="alert alert-info alert-block" id="FirstUpdateInfo">
 	<h4 class="alert-heading">Loading...</h4>
 	Please wait.
