--- a/webui/index.html
+++ b/webui/index.html
@@ -50,6 +50,7 @@
 	<script language="javascript" type="text/javascript" src="history.js"></script>
 	<script language="javascript" type="text/javascript" src="upload.js"></script>
 	<script language="javascript" type="text/javascript" src="config.js"></script>
+	<script language="javascript" type="text/javascript" src="feed.js"></script>
 
 	<style>.hide{display:none;}</style>
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap.css" />
@@ -247,6 +248,16 @@
 				<div class="btn-group phone-only inline"><button class="btn" onclick="Downloads.moveClick('down')" title="Move selected nzb-files down"><i class="icon-down"></i></button></div>
 				<div class="btn-group phone-only inline"><button class="btn" onclick="Downloads.moveClick('bottom')" title="Move selected nzb-files to the bottom"><i class="icon-bottom"></i></button></div>
 
+				<div class="btn-group" id="RssMenuBlock">
+					<button class="btn dropdown-toggle" data-toggle="dropdown" title="RSS Feeds"><i class="icon-rss"></i><span class="btn-caption"> Feeds </span><span class="phone-only inline">&nbsp;</span><span class="caret"></span></button>
+					<ul class="dropdown-menu" id="RssMenu">
+						<li class="menu-header">RSS Feeds</li>
+						<li class="feed-menu-template hide"><a href="#">Feed1</a></li>
+						<li class="divider" id="RssMenu_Divider"></li>
+						<li><a href="#" onclick="Feeds.fetchAll()">Fetch All Feeds</a></li>
+					</ul>
+				</div>
+
 				<div class="btn-group phone-only inline" id="DownloadsRecordsPerPageBlockPhone">
 				</div>
 
@@ -424,10 +435,8 @@
 						<h4 class="alert-heading">Configuration has been saved successfully</h4>
 						<p id="ConfigSaved_Reload">For changes to have effect NZBGet must be reloaded (soft-restart).<br><br>
 						TIP: You can reload anytime later in section <em><strong>SYSTEM</strong></em> on settings page.</p>
-						<p id="ConfigSaved_Close">The changes made to post-processing settings will be in effect for the next post-processing job.</p>
 					</div>
 					<button type="button" class="btn btn-primary" id="ConfigReload" onclick="Config.reload()">Reload NZBGet</button>
-					<button type="button" class="btn btn-primary" id="ConfigClose" onclick="Config.close()">Return to Downloads</button>
 				</div>
 
 				<div id="ConfigContent">
@@ -451,7 +460,7 @@
 									<p>
 									On this page you can review and change settings. When you done with changes click
 									<em><strong>Save all changes</strong></em>, which saves the changes made in all sections.
-									It's not neccessary to save changes in each section individually.
+									It's not necessary to save changes in each section individually.
 									</p>
 
 									<h4>NZBGet settings</h4>
@@ -845,7 +854,6 @@
 		</div>
 
 		<div class="dialog-transmit hide" style="position:absolute;margin-left:260px;" id="DownloadsEdit_Transmit"><img src="img/transmit.gif"></div>
-		<!-- <a href="#DownloadsEdit_GeneralTab" class="btn" data-toggle="tab" id="DownloadsEdit_Back">Back</a> -->
 		<a href="#" class="btn" data-dismiss="modal" id="DownloadsEdit_Close">Close</a>
 		<a href="#" class="btn btn-primary" id="DownloadsEdit_Save">Save changes</a>
 	</div>
@@ -1105,6 +1113,45 @@
 		<div class="dialog-transmit" style="position:absolute;margin-left:320px;" id="HistoryEdit_Transmit"><img src="img/transmit.gif"></div>
 		<a href="#" class="btn" data-dismiss="modal" id="HistoryEdit_Close">Close</a>
 		<a href="#" class="btn btn-primary" id="HistoryEdit_Save">Save changes</a>
+	</div>
+</div>
+
+<!-- *** FEED VIEW DIALOG ************************************************************ -->
+
+<div class="modal hide modal-max" id="FeedDialog">
+	<div class="modal-header">
+		<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
+		<h3 id ="FeedDialog_Title">Title</h3>
+	</div>
+
+	<div class="modal-body">
+		<div>
+			<div class="modal-tab">
+				<div class="loading-block">
+					<img src="img/transmit.gif"></img>
+				</div>
+				<div>
+					<div class="row-fluid modal-scrollheader">
+						<div class="pull-right" style="margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
+					</div>
+
+					<div class="modal-inner-scroll">
+						<table class="table table-striped table-bordered table-check table-cancheck datatable" id="FeedDialog_ItemTable" style="margin-bottom:15px;">
+							<thead><tr><th><div class="check img-check"></div></th><th>Status</th><th>Name</th><th>Category</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
+							<tbody></tbody>
+						</table>
+						<div class="pull-right" id ="FeedDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedDialog_ItemTable_pager"></div></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+	<div class="modal-footer">
+		<div class="dialog-transmit hide" style="position:absolute;right:220px;" id="FeedDialog_Transmit"><img src="img/transmit.gif"></div>
+		<a href="#" class="btn" data-dismiss="modal" id="FeedDialog_Close">Close</a>
+		<a href="#" class="btn btn-primary" id="FeedDialog_Save" onclick="FeedDialog.fetch()">Fetch selected</a>
 	</div>
 </div>
 
@@ -1404,6 +1451,21 @@
 	</div>
 </div>
 
+<!-- *** FEED ERROR DIALOG ************************************************** -->
+
+<div class="modal modal-mini modal-center hide" id="AlertDialog">
+	<div class="modal-header">
+	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
+	<h3 id="AlertDialog_Title">Title</h3>
+	</div>
+	<div class="modal-body">
+	<p id="AlertDialog_Text"></p>
+	</div>
+	<div class="modal-footer">
+	<a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
+	</div>
+</div>
+
 <!-- ***  ALERT: NOT IMPLEMENTED***************************************************** -->
 
 <div id="Notif_NotImplemented" data-duration="1000" class="alert alert-error alert-center alert-center-small hide">
@@ -1537,6 +1599,18 @@
 
 <div id="Notif_History_Saved" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
     <strong>Saved</strong>
+</div>
+
+<div id="Notif_Feeds_FetchAll" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
+    <strong>Fetching new items</strong>
+</div>
+
+<div id="Notif_FeedDialog_Select" data-duration="2000" class="alert alert-error alert-center alert-center-small hide">
+    <strong>No records selected</strong>
+</div>
+
+<div id="Notif_FeedDialog_Fetched" data-duration="1000" class="alert alert-inverse alert-center alert-center-small hide">
+    <strong>Fetching items</strong>
 </div>
 
 <div id="Notif_Config_Unchanged" data-duration="2000" class="alert alert-inverse alert-center alert-center-small hide">
