--- a/webui/index.html
+++ b/webui/index.html
@@ -1132,6 +1132,19 @@
 				</div>
 				<div>
 					<div class="row-fluid modal-scrollheader">
+						<div class="pull-left btn-toolbar form-inline modal-toolbar" id="FeedDialog_Toolbar">
+							<!-- EDIT BUTTONS -->
+							<div class="btn-group phone-hide">
+								<button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All"></i>All &nbsp;<span class="badge badge-primary" id="FeedDialog_Badge_ALL">?</span></button>
+								<button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New"></i>New &nbsp;<span class="badge" id="FeedDialog_Badge_NEW">?</span></button>
+								<button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched"></i>Fetched &nbsp;<span class="badge" id="FeedDialog_Badge_FETCHED">?</span></button>
+								<button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog"></i>Backlog &nbsp;<span class="badge" id="FeedDialog_Badge_BACKLOG">?</span></button>
+							</div>
+							<div class="btn-group phone-only inline"><button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All"></i>All <span class="badge badge-inverse" id="FeedDialog_Badge_ALL2">?</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New"></i>New <span class="badge" id="FeedDialog_Badge_NEW2">?</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched"></i>Fetched <span class="badge" id="FeedDialog_Badge_FETCHED2">?</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog"></i>Backlog <span class="badge" id="FeedDialog_Badge_BACKLOG2">?</span></button></div>
+						</div>
 						<div class="pull-right" style="margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
 					</div>
 
