--- a/webui/index.html
+++ b/webui/index.html
@@ -1133,24 +1133,32 @@
 				<div>
 					<div class="row-fluid modal-scrollheader">
 						<div class="pull-left btn-toolbar form-inline modal-toolbar" id="FeedDialog_Toolbar">
-							<!-- EDIT BUTTONS -->
+							<!-- STATUS FILTER BUTTONS -->
 							<div class="btn-group phone-hide">
 								<button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All"></i>All &nbsp;<span class="badge badge-primary" id="FeedDialog_Badge_ALL">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New"></i>New &nbsp;<span class="badge" id="FeedDialog_Badge_NEW">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched"></i>Fetched &nbsp;<span class="badge" id="FeedDialog_Badge_FETCHED">?</span></button>
 								<button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog"></i>Backlog &nbsp;<span class="badge" id="FeedDialog_Badge_BACKLOG">?</span></button>
 							</div>
-							<div class="btn-group phone-only inline"><button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All"></i>All <span class="badge badge-inverse" id="FeedDialog_Badge_ALL2">?</span></button></div>
+							<div class="btn-group phone-only inline"><button class="btn btn-primary" onclick="FeedDialog.filter('ALL')" title="Show All"></i>All <span class="badge badge-primary" id="FeedDialog_Badge_ALL2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('NEW')" title="Show only New"></i>New <span class="badge" id="FeedDialog_Badge_NEW2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('FETCHED')" title="Show only Fetched"></i>Fetched <span class="badge" id="FeedDialog_Badge_FETCHED2">?</span></button></div>
 							<div class="btn-group phone-only inline"><button class="btn" onclick="FeedDialog.filter('BACKLOG')" title="Show only Backlog"></i>Backlog <span class="badge" id="FeedDialog_Badge_BACKLOG2">?</span></button></div>
+
+							<!-- TITLE/FILENAME BUTTONS -->
+							<div class="btn-group phone-hide">
+								<button class="btn btn-primary FeedDialog-names" id="FeedDialog_Titles" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles"></i>Titles</button>
+								<button class="btn FeedDialog-names" id="FeedDialog_Filenames" onclick="FeedDialog.setFilenameMode(true)" title="Show Filenames"></i>Filenames</button>
+							</div>
+							<div class="btn-group phone-only inline"><button class="btn FeedDialog-names btn-primary" id="FeedDialog_Titles2" onclick="FeedDialog.setFilenameMode(false)" title="Show Titles"></i>Titles</button></div>
+							<div class="btn-group phone-only inline"><button class="btn FeedDialog-names" id="FeedDialog_Filenames2" onclick="FeedDialog.setFilenameMode(true)" title="Show Filenames"></i>Filenames</button></div>
 						</div>
 						<div class="pull-right" style="margin-bottom:10px;"><input id="FeedDialog_ItemTable_filter" class="search-query" placeholder="Search" type="text"></div>
 					</div>
 
 					<div class="modal-inner-scroll">
 						<table class="table table-striped table-bordered table-check table-cancheck datatable" id="FeedDialog_ItemTable" style="margin-bottom:15px;">
-							<thead><tr><th><div class="check img-check"></div></th><th>Status</th><th>Name</th><th>Category</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
+							<thead><tr><th><div class="check img-check"></div></th><th>Status</th><th id="FeedDialog_ItemTable_Name">Title</th><th>Category</th><th class="text-right">Age</th><th class="text-right">Size</th></tr></thead>
 							<tbody></tbody>
 						</table>
 						<div class="pull-right" id ="FeedDialog_ItemTable_pagerBlock"><div class="pagination" id ="FeedDialog_ItemTable_pager"></div></div>
