added confirmation by deleting download or history item from edit-dialog
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@754 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1195,6 +1195,26 @@
 	<div id="DownloadsDeleteConfirmDialog_OK">Delete</div>
 </div>
 
+<!-- *** DELETE CURRENT DOWNLOAD CONFIRMATION DIALOG DATA ***************************************** -->
+
+<div class="hide" id="DownloadEditDeleteConfirmDialog">
+	<div id="DownloadEditDeleteConfirmDialog_Title">Download</div>
+	<div id="DownloadEditDeleteConfirmDialog_Text">
+		<p>
+		Delete this download?
+		</p>
+		<p id="DownloadEditDeleteConfirmDialog_Remain" class="confirm-help-block">
+		The item will be removed from queue. Already downloaded files remain on disk (this behavior can be changed via option
+		<strong><em>DeleteCleanupDisk</em></strong>).
+		</p>
+		<p id="DownloadEditDeleteConfirmDialog_Cleanup" class="confirm-help-block">
+		The item will be removed from queue. Already downloaded files will be deleted from disk (this behavior can be changed via option
+		<strong><em>DeleteCleanupDisk</em></strong>).
+		</p>
+	</div>
+	<div id="DownloadEditDeleteConfirmDialog_OK">Delete</div>
+</div>
+
 <!-- *** CLEAR HISTORY CONFIRMATION DIALOG DATA ***************************************** -->
 
 <div class="hide" id="HistoryClearConfirmDialog">
@@ -1223,6 +1243,21 @@
 		</p>
 	</div>
 	<div id="HistoryDeleteConfirmDialog_OK">Delete</div>
+</div>
+
+<!-- *** DELETE CURRENT HISTORY RECORD CONFIRMATION DIALOG DATA ******************************** -->
+
+<div class="hide" id="HistoryEditDeleteConfirmDialog">
+	<div id="HistoryEditDeleteConfirmDialog_Title">History</div>
+	<div id="HistoryEditDeleteConfirmDialog_Text">
+		<p>
+		Delete this history record?
+		</p>
+		<p class="confirm-help-block">
+		The record will be removed from the history. All files remain on disk.
+		</p>
+	</div>
+	<div id="HistoryEditDeleteConfirmDialog_OK">Delete</div>
 </div>
 
 <!-- *** CLEAR MESSAGES CONFIRMATION DIALOG DATA ***************************************** -->
