addition to r757: fixed: statistic dialog had a scroll bar
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@763 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -564,7 +564,7 @@
 
 <!-- *** INFO ************************************************************ -->
 
-<div class="modal hide" id="InfoDialog">
+<div class="modal no-footer hide" id="InfoDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>NZBGet <span id="version">version</h3>
@@ -610,7 +610,7 @@
 
 <!-- *** STATISTICS ************************************************************ -->
 
-<div class="modal modal-mini modal-padded hide" id="StatDialog">
+<div class="modal modal-mini modal-padded no-footer hide" id="StatDialog">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Statistics and Status</h3>
@@ -698,7 +698,7 @@
 
 <!-- *** QUICK HELP: EXPLAINING PAUSE OPTIONS ************************************************************ -->
 
-<div class="modal hide" id="PauseHelp">
+<div class="modal no-footer hide" id="PauseHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: Explaining pause options</h3>
@@ -1369,7 +1369,7 @@
 
 <!-- ***  QUICK HELP: ADD FILES ************************************************************ -->
 
-<div class="modal hide" id="AddDialogHelp">
+<div class="modal no-footer hide" id="AddDialogHelp">
 	<div class="modal-header">
 	<a class="close" href='#' data-dismiss="modal"><i class="icon-close"></i></a>
 	<h3>Help: Tips for adding NZB-Files</h3>
@@ -1499,7 +1499,7 @@
 	</div>
 </div>
 
-<!-- *** FEED ERROR DIALOG ************************************************** -->
+<!-- *** ERROR DIALOG ************************************************** -->
 
 <div class="modal modal-mini modal-padded modal-center hide" id="AlertDialog">
 	<div class="modal-header">
