pp-scripts which move files can now inform the program about new location by printing text "[NZB] FINALDIR=/path/to/files"; the final path is then shown in history dialog instead of download path
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@765 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/webui/index.html
+++ b/webui/index.html
@@ -1048,7 +1048,7 @@
 						</div>
 
 						<div class="control-group" id="HistoryEdit_PathGroup">
-							<label class="control-label" for="HistoryEdit_Path">Download Path</label>
+							<label class="control-label" for="HistoryEdit_Path">Destination</label>
 							<div class="controls">
 								<span class="uneditable-mulitline-input" id="HistoryEdit_Path"></span>
 							</div>
